Update code before pulling

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://jonathantran429.github.io/",
+  "homepage": "https://jonathantran429.github.io/study-tracker/",
   "name": "study-tracker",
   "version": "0.1.0",
   "private": true,
